# PAarobot_ws

./: frames_2025-12-10_16.00.38.gv  frames_2025-12-13_00.24.08.gv  frames_2025-12-13_00.24.30.gv  test.py
src/PArobot_setup/: package.xml  setup.cfg  setup.py
src/PArobot_setup/PArobot_setup/: camera_node.py  follower_node.py  main_node.py  motor_node.py  person_detector_node.py  rf_remote_node.py
src/PArobot_setup/launch/: robot_bringup.launch.py
src/parobot_sim/: package.xml  setup.cfg  setup.py
src/parobot_sim/config/: nav2_params.yaml  nav2_params_default.yaml  parobot_mapping.rviz  parobot_nav2_params.yaml  parobot_slam_params.yaml
src/parobot_sim/launch/: mapping.launch.py  navigation.launch.py  parobot_gz.launch.py  sim_only.launch.py
src/parobot_sim/maps/: parobot_map.pgm  parobot_map.yaml
src/parobot_sim/parobot_sim/: fake_person_detector_node.py  odom_tf_broadcaster.py  random_walk_node.py
src/parobot_sim/urdf/: parobot.urdf  parobot.urdf.xacro
src/parobot_sim/worlds/: empty.sdf  parobot_world.sdf
