<?xml version="1.0"?>
<package format="3">
  <name>parobot_sim</name>
  <version>0.0.0</version>
  <description>Simulation of PArobot using Gazebo Harmonic</description>

  <maintainer email="nikhil@example.com">nikhil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>PArobot_setup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
